# lidar-camera-fusion

./: CMakeLists.txt  package.xml
src/: colour_cloud_node.cpp  scan_archiver.cpp
