<?xml version="1.0"?>
<package>
  <name>colour_cloud</name>
  <version>0.0.0</version>
  <description>The colour_cloud package</description>

  <maintainer email="josh.mcculloch@pg.canterbury.ac.nz">Josh</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensors_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensors_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
